force-app/main/default/objects/MS_FSM_Asset_Transaction_Log__c/MS_FSM_Asset_Transaction_Log__c.object-meta.xml
<CustomObject>
    <description>Purpose of this Asset is to capture key Asset Details, upon transactions like Location Change, Install, and Remove for Reporting Purposes</description>
    <label>Asset Transaction Log</label>
    <nameField>
        <displayFormat>AT-{00000000}</displayFormat>
        <label>Asset Transaction Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>