force-app/main/default/objects/MS_FSM_Asset_Transaction_Log__c/fields/MS_FSM_Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Asset_Id__c</fullName>
    <description>Purpose of this field is to capture the Id value of the Asset</description>
    <externalId>true</externalId>
    <label>Asset Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>