force-app/main/default/objects/MS_FSM_Asset_Transaction_Log__c/fields/MS_FSM_Etahub_InventoryTL_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Etahub_InventoryTL_Record_ID__c</fullName>
    <description>Record ID of Inventory TL check in created from Status change to Obsolete with Disposition of Return to MSE or Return to Original O&amp;M Location</description>
    <label>Etahub Inventory TL Record ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>