force-app/main/default/objects/MS_FSM_Asset_Transaction_Log__c/fields/MS_FSM_EtaHub_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_EtaHub_Record_Id__c</fullName>
    <description>Purpose of this field is to capture the EtaHub record Id</description>
    <label>EtaHub Record Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>