force-app/main/default/objects/MS_FSM_Asset_Transaction_Log__c/fields/MS_FSM_EtaHub_Source_Table__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_EtaHub_Source_Table__c</fullName>
    <label>EtaHub Source Table</label>
    <length>50</length>
    <type>Text</type>
</CustomField>