force-app/main/default/objects/MS_FSM_Asset_Transaction_Log__c/fields/MS_FSM_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Location_Id__c</fullName>
    <description>Purpose of this field is to capture the location Id of an asset transaction</description>
    <label>Location Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>