force-app/main/default/objects/MS_FSM_Asset_Transaction_Log__c/fields/MS_FSM_Log_Issue__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Log_Issue__c</fullName>
    <inlineHelpText>Type of issue with this transaction log. Invalid Timestamp means the timestamps are not sequentially ordered. Invalid Relationship means the Asset is installed under two Parent Assets at the same time.</inlineHelpText>
    <label>Log Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invalid Relationship</fullName>
            </value>
            <value>
                <fullName>Invalid Timestamp</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>