force-app/main/default/objects/MS_FSM_Asset_Transaction_Log__c/fields/MS_FSM_Method_of_Creation__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Method_of_Creation__c</fullName>
    <label>Method of Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EtaHub Asset Staging</fullName>
            </value>
            <value>
                <fullName>Obsolete Asset Flow</fullName>
            </value>
            <value>
                <fullName>Upgrades</fullName>
            </value>
            <value>
                <fullName>Rebuild Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>