force-app/main/default/objects/MS_FSM_Asset_Transaction_Log__c/fields/MS_FSM_Parent_Asset_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Parent_Asset_Serial_Number__c</fullName>
    <description>Purpose of this field is to capture the parent asset&apos;s serial number</description>
    <label>Parent Asset Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>