force-app/main/default/objects/MS_FSM_Asset_Transaction_Log__c/fields/MS_FSM_Product__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Product__c</fullName>
    <description>Salesforce Product Id of the Asset</description>
    <label>Product</label>
    <length>18</length>
    <type>Text</type>
</CustomField>