force-app/main/default/objects/MS_FSM_Asset_Transaction_Log__c/fields/MS_FSM_Root_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Root_Serial_Number__c</fullName>
    <description>Purpose of this field is to track the root asset serial number at the time of creation of the log.</description>
    <label>Root Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>