force-app/main/default/objects/MS_FSM_Asset_Transaction_Log__c/fields/MS_FSM_Run_Hours__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Run_Hours__c</fullName>
    <description>Purpose of this Field is to capture relevant Asset Run Hours at the time of Install or Removal</description>
    <label>Run Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>