force-app/main/default/objects/MS_FSM_Asset_Transaction_Log__c/fields/MS_FSM_Status__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Status__c</fullName>
    <description>Status of the Asset after the transaction is logged</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>