force-app/main/default/objects/MS_FSM_Asset_Transaction_Log__c/fields/MS_FSM_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Timestamp__c</fullName>
    <description>Timestamp of the transaction related to the asset.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>