force-app/main/default/objects/MS_FSM_Asset_Transaction_Log__c/fields/MS_FSM_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Transaction_Type__c</fullName>
    <description>Purpose of this field is to capture the type of asset transaction made</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status Change</fullName>
            </value>
            <value>
                <fullName>Location Change</fullName>
            </value>
            <value>
                <fullName>Rework</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>