force-app/main/default/objects/MS_FSM_Asset_Transaction_Log__c/fields/MS_FSM_Work_Order_Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Work_Order_Line_Item_Id__c</fullName>
    <description>Purpose of this field is to capture the Id of Work Order Line Item that Asset Transaction is related to</description>
    <label>Work Order Line Item Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>